@@ -5277,6 +5277,8 @@ non_reserved_word:
 |  TIME 	{ $$ = sa_strdup(SA, "time"); }
 |  TIMESTAMP	{ $$ = sa_strdup(SA, "timestamp"); }
 |  INTERVAL	{ $$ = sa_strdup(SA, "interval"); }
+|  QUARTER	{ $$ = sa_strdup(SA, "quarter"); }
+|  WEEK 	{ $$ = sa_strdup(SA, "week"); }
 |  IMPRINTS	{ $$ = sa_strdup(SA, "imprints"); }
 
 |  PREPARE	{ $$ = sa_strdup(SA, "prepare"); }
