@@ -110,7 +110,7 @@ QUERY = SELECT f1, extract(year from f1) FROM TIME_TBL;
 ERROR = !types time(3,0) and month_interval(32,0) are not equal for column 'f1'
 CODE  = 42000
 MAPI  = (monetdb) /var/tmp/mtest-30274/.s.monetdb.37685
-QUERY = SELECT f1, "week"(f1) FROM TIME_TBL;
+QUERY = SELECT f1, week(f1) FROM TIME_TBL;
 ERROR = !types time(3,0) and date(0,0) are not equal for column 'f1'
 CODE  = 42000
 MAPI  = (monetdb) /var/tmp/mtest-30274/.s.monetdb.37685
