@@ -306,8 +306,7 @@ QUERY = SELECT '' AS "54", d1 as "timestamp",
            date_part( 'quarter', d1) AS quarter, date_part( 'msec', d1) AS msec,
            date_part( 'usec', d1) AS usec
            FROM TIMESTAMP_TBL WHERE d1 BETWEEN '1902-01-01' AND '2038-01-01';
-ERROR = !syntax error, unexpected QUARTER in: "select '' as "54", d1 as "timestamp",
-        !   date_part( 'quarter', d1) as quarter"
+ERROR = !SELECT: no such binary operator 'date_part(char,timestamp)'
 CODE  = 42000
 MAPI  = (monetdb) /var/tmp/mtest-30274/.s.monetdb.37685
 QUERY = SELECT '' AS to_char_1, to_char(d1, 'DAY Day day DY Dy dy MONTH Month month RM MON Mon mon') 
